grantnav/frontend/static/css/main.css
/* ... */
.padding-right\:3 {
  padding-right: 3rem  !important; }

.padding-right\:4 {
  padding-right: 4rem  !important; }

.padding-right\:5 {
  padding-right: 5rem  !important; }

.padding-top\:05 {
  padding-top: .5rem  !important; }

.padding-top\:1 {
  padding-top: 1rem  !important; }

.padding-top\:2 {
  padding-top: 2rem  !important; }

.padding-top\:3 {
  padding-top: 3rem  !important; }

.padding-top\:4 {
  padding-top: 4rem  !important; }

.padding-top\:5 {
  padding-top: 5rem  !important; }

.padding-bottom\:05 {
  padding-bottom: .5rem  !important; }

.padding-bottom\:1 {
  padding-bottom: 1rem  !important; }

.padding-bottom\:2 {
  padding-bottom: 2rem  !important; }

.padding-bottom\:3 {
  padding-bottom: 3rem  !important; }

.padding-bottom\:4 {
  padding-bottom: 4rem  !important; }

.padding-bottom\:5 {
  padding-bottom: 5rem  !important; }

.justify-content-end {
  justify-content: end; }

.white-wash {
  background-color: white !important; }

:root {
  --gray-05-hsl: 0, 0%, 95%;
  --gray-10-hsl: 0, 0%, 90%;
  --gray-20-hsl: 0, 0%, 80%;
  --gray-30-hsl: 0, 0%, 70%;
  --gray-70-hsl: 0, 0%, 30%;
  --gray-80-hsl: 0, 0%, 20%;
  --black-hsl:   0, 0%, 10%;
  --white-hsl:   0, 100%, 100%;
  --success-green-hsl:  140, 100%, 17%;
  --error-red-hsl:        5,  81%, 95%;
  --warning-yellow-hsl:  45, 78%, 98%;
  --base-hsl:     176, 44%, 15%;
  --orange-hsl:    23, 74%, 51%;
  --teal-hsl:     186, 42%, 51%;
  --yellow-hsl:    47, 86%, 55%;
  --red-hsl:        2, 66%, 44%;
  --teal-dark-hsl: 185, 40%, 30%;
  --orange-dark-hsl: 23, 73%, 38%;
  --yellow-dark-hsl: 47, 85%, 30%;
  --default-hsl: var(--base-hsl);
  --primary-hsl: var(--orange-hsl);
  --accent-hsl:  var(--teal-hsl);
  --color-error:   hsla(var(--red-hsl), 1);
  --color-warning: hsla(var(--yellow-hsl), 1);
  --color-success: hsla(var(--success-green-hsl), 1);
  --color-base:     hsla(var(--base-hsl),   1);
  --color-orange:   hsla(var(--orange-hsl), 1);
  --color-teal:     hsla(var(--teal-hsl),   1);
  --color-yellow:   hsla(var(--yellow-hsl), 1);
  --color-red:      hsla(var(--red-hsl),    1);
  --color-black:    hsla(var(--black-hsl),   1);
  --color-white:    hsla(var(--white-hsl),   1);
  --color-orange-dark: hsla(var(--orange-dark-hsl), 1);
  --color-teal-dark:   hsla(var(--teal-dark-hsl),   1);
  --color-yellow-dark: hsla(var(--yellow-dark-hsl), 1);
  --color-default: hsla(var(--base-hsl),   1);
  --color-primary: hsla(var(--orange-hsl), 1);
  --color-accent:  hsla(var(--teal-hsl),   1); }

.layout {
  min-height: 100vh; }
  .layout__content {
    width: 100%; }
  .layout__content-inner {
    padding-top: 54px;
    padding-bottom: 64px; }
  .layout--single-column {
    display: grid;
    grid-template-areas: "header" "content" "footer"; }
    .layout--single-column .layout__content {
      max-width: 960px;
      margin-left: auto;
      margin-right: auto; }
  .layout--narrow .layout__content {
    max-width: 700px; }
  .layout--full .layout__content {
    max-width: 100vw;
    width: 100vw; }
  .layout--two-columns {
    display: grid;
    grid-template-areas: "nav" "header" "content" "footer"; }
    @media (min-width: 36em) {
      .layout--two-columns {
        grid-template-columns: 320px 1fr;
        grid-template-rows: auto auto 1fr auto;
        grid-template-areas: "nav nav" "header header" "sidebar content" "footer footer"; } }
    .layout--two-columns .layout__nav {
      grid-area: nav; }
    .layout--two-columns .layout__header {
      grid-area: header; }
    .layout--two-columns .layout__content {
      grid-area: content; }
    .layout--two-columns .layout__sidebar {
      grid-area: sidebar; }
      @media (max-width: 35.98em) {
        .layout--two-columns .layout__sidebar {
          display: none; } }
    .layout--two-columns .layout__footer {
      grid-area: footer; }
  @media (min-width: 36em) {
    .layout--docs {
      display: flex;
      flex-direction: column;
      overflow: hidden;
      height: 100vh; }
      .layout--docs .layout__header {
        display: flex;
        flex-direction: column;
        flex: 1 0 auto; }
      .layout--docs .layout__body {
        display: flex;
        flex: 1 1 100%;
        min-height: 0;
        position: relative; }
        .layout--docs .layout__body > * {
          overflow-x: auto;
          overflow-y: auto;
          -webkit-overflow-scrolling: touch;
          -ms-overflow-style: none; }
      .layout--docs .layout__sidebar {
        flex: 0 0 auto;
        width: 330px;
        padding-top: 1rem;
        border-right: 1px solid hsl(var(--base-hsl), 0.2); }
      .layout--docs .layout__content {
        flex: 1 1 auto; }
      .layout--docs .layout__content-inner {
        padding-top: 0px; } }
  @media print {
    .layout {
      display: block;
      height: auto;
      overflow: auto;
      width: auto;
      padding: 0px;
      margin: 0px;
      max-width: 100%; }
      .layout .layout__header,
      .layout .layout__body,
      .layout .layout__sidebar,
      .layout .layout__content, .layout--single-column, .layout--two-columns {
        display: block;
        height: auto;
        overflow: auto;
        width: auto;
        padding: 0px;
        margin: 0px;
        max-width: 100%; }
      .layout .layout__sidebar {
        display: none; }
      .layout .layout__body > * {
        overflow: auto; } }

:root {
  --colors-default: var(--color-base);
  --colors-white: #FFFFFF;
  --colors-orange: var(--color-orange);
  --colors-teal: var(--color-teal);
  --colors-yellow: var(--color-yellow);
  --colors-red: var(--color-red);
  --colors-alt: var(--colors-teal);
  --colors-black: var(--colors-default); }

.swatch {
  padding-right: 8px; }
  .swatch__color {
    height: calc(100% - 16px);
    margin: 8px 0 8px 8px;
    padding: 24px 10px;
    text-align: center;
    color: white;
    font-size: 1.5rem; }
  .swatch p {
    margin: 16px 0 0; }
  .swatch pre {
    padding: 0;
    margin: 8px 0;
    height: 100%;
    background-color: #F0F0F0; }
/* ... */

